fix bug nginx conffig

--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/register.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/register.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Đăng ký</title>
 
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Forum|Open+Sans:400,600|Roboto:100,300,400,500,700"
+    rel="stylesheet">
   <link rel="stylesheet" href="../assets/dist/style/elements.css">
   <link rel="stylesheet" href="../assets/dist/style/header.css">
   <link rel="stylesheet" href="../assets/dist/style/footer.css">
