--- a/FE/Admin/admin-dashboard/customer-list.html
+++ b/FE/Admin/admin-dashboard/customer-list.html
@@ -679,7 +679,8 @@
 								</div>
 								<div class="sherah-table sherah-page-inner sherah-border sherah-default-bg mg-top-25">
 									<!-- Filter, Search, and Page Controls -->
-									<div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px;">
+									<div
+										style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 12px;">
 										<div>
 											<label for="role-filter">Role: </label>
 											<select id="role-filter">
@@ -690,29 +691,41 @@
 											</select>
 										</div>
 										<div>
-											<input id="search-name" type="text" placeholder="Search by name..." style="padding: 4px 8px; border-radius: 4px; border: 1px solid #ccc;">
+											<input id="search-name" type="text" placeholder="Search by name..."
+												style="padding: 4px 8px; border-radius: 4px; border: 1px solid #ccc;">
 										</div>
 									</div>
 									<table id="sherah-table__vendor" class="sherah-table__main sherah-table__main-v3">
 										<!-- sherah Table Head -->
 										<thead class="sherah-table__head">
 											<tr>
-												<th class="sherah-table__column-2 sherah-table__h2 sortable" data-sort="fullName">Name <span class="sort-indicator"></span></th>
-												<th class="sherah-table__column-3 sherah-table__h3 sortable" data-sort="email">Email <span class="sort-indicator"></span></th>
-												<th class="sherah-table__column-4 sherah-table__h4 sortable" data-sort="fullName">Fullname <span class="sort-indicator"></span></th>
-												<th class="sherah-table__column-5 sherah-table__h5 sortable" data-sort="phone">Phone <span class="sort-indicator"></span></th>
-												<th class="sherah-table__column-7 sherah-table__h6 sortable" data-sort="status">Status <span class="sort-indicator"></span></th>
-												<th class="sherah-table__column-8 sherah-table__h7 sortable" data-sort="createdAt">Join On <span class="sort-indicator"></span></th>
-												<th class="sherah-table__column-9 sherah-table__h8 sortable" data-sort="role">Role <span class="sort-indicator"></span></th>
+												<th class="sherah-table__column-2 sherah-table__h2 sortable"
+													data-sort="fullName">Name <span class="sort-indicator"></span></th>
+												<th class="sherah-table__column-3 sherah-table__h3 sortable"
+													data-sort="email">Email <span class="sort-indicator"></span></th>
+												<th class="sherah-table__column-4 sherah-table__h4 sortable"
+													data-sort="fullName">Fullname <span class="sort-indicator"></span>
+												</th>
+												<th class="sherah-table__column-5 sherah-table__h5 sortable"
+													data-sort="phone">Phone <span class="sort-indicator"></span></th>
+												<th class="sherah-table__column-7 sherah-table__h6 sortable"
+													data-sort="status">Status <span class="sort-indicator"></span></th>
+												<th class="sherah-table__column-8 sherah-table__h7 sortable"
+													data-sort="createdAt">Join On <span class="sort-indicator"></span>
+												</th>
+												<th class="sherah-table__column-9 sherah-table__h8 sortable"
+													data-sort="role">Role <span class="sort-indicator"></span></th>
 											</tr>
 										</thead>
 										<tbody class="sherah-table__body" id="user-table-body">
 											<!-- User rows will be injected here by JS -->
 										</tbody>
 									</table>
-										<!-- Pagination Controls -->
-										<div id="pagination" style="display: flex; justify-content: flex-end; align-items: center; margin-top: 12px;"></div>
+									<!-- Pagination Controls -->
+									<div id="pagination"
+										style="display: flex; justify-content: flex-end; align-items: center; margin-top: 12px;">
 									</div>
+								</div>
 							</div>
 							<!-- End Dashboard Inner -->
 						</div>
@@ -748,7 +761,7 @@
 				document.getElementById("sidebar").innerHTML = html;
 			});
 	</script>
-	
+
 	<style>
 		/* --- CSS cho Role (Quyền hạn) --- */
 		.role-badge {
@@ -837,31 +850,33 @@
 
 
 	<script>
-	const apiBase = "http://localhost:5135/api/Users";
-	let allUsers = [];
-	let currentPage = 1;
-	const pageSize = 6;
-	let currentSort = { field: '', dir: '' };
+		const apiBase = "http://localhost:5135/api/Users";
+		let allUsers = [];
+		let currentPage = 1;
+		const pageSize = 6;
+		let currentSort = { field: '', dir: '' };
 
-	function renderUsers(users) {
-		const tbody = document.getElementById('user-table-body');
-		tbody.innerHTML = '';
-		users.forEach(user => {
-			const roles = (user.role || user.roles || []);
-			const roleNames = Array.isArray(roles) ? roles.map(r => r.roleName || r.RoleName || '').filter(Boolean) : [];
-			if (roleNames.includes('admin') || roleNames.includes('Admin')) return;
+		function renderUsers(users) {
+			const tbody = document.getElementById('user-table-body');
+			tbody.innerHTML = '';
+			users.forEach(user => {
+				const roles = (user.role || user.roles || []);
+				const roleNames = Array.isArray(roles) ? roles.map(r => r.roleName || r.RoleName || '').filter(Boolean) : [];
+				if (roleNames.includes('admin') || roleNames.includes('Admin')) return;
 
-			let statusColor = '';
-			if ((user.status || '').toLowerCase() === 'active') statusColor = 'background: #4caf50; color: #fff;';
-			else if ((user.status || '').toLowerCase() === 'blocked') statusColor = 'background: #f44336; color: #fff;';
+				const status = (user.status || '').toUpperCase();
 
-			const statusOptions = [
-				{ value: 'active', label: 'Active' },
-				{ value: 'blocked', label: 'Blocked' }
-			];
+				let statusColor = '';
+				if (status === 'ACTIVE') statusColor = 'background:#4caf50;color:#fff;';
+				else if (status === 'BLOCKED') statusColor = 'background:#f44336;color:#fff;';
 
-			const tr = document.createElement('tr');
-			tr.innerHTML = `
+				const statusOptions = [
+					{ value: 'ACTIVE', label: 'Active' },
+					{ value: 'BLOCKED', label: 'Blocked' }
+				];
+
+				const tr = document.createElement('tr');
+				tr.innerHTML = `
 				<td class="sherah-table__column-1 sherah-table__data-1">
 					<div class="sherah-table__product">
 						<h4 class="sherah-table__vendor--title"><a href="#">${user.fullName || ''}</a></h4>
@@ -884,7 +899,7 @@
 				</td>
 				<td class="sherah-table__column-5 sherah-table__data-5">
 					<select class="sherah-table__status" style="${statusColor} border:none; border-radius:4px; padding:2px 8px;" onchange="updateStatus(${user.id}, this.value)">
-						${statusOptions.map(opt => `<option value="${opt.value}" ${((user.status || '').toLowerCase() === opt.value) ? 'selected' : ''}>${opt.label}</option>`).join('')}
+						${statusOptions.map(opt => `<option value="${opt.value}" ${(status === opt.value) ? 'selected' : ''}>${opt.label}</option>`).join('')}
 					</select>
 				</td>
 				<td class="sherah-table__column-6 sherah-table__data-6">
@@ -898,202 +913,202 @@
 					</div>
 				</td>
 			`;
-			tbody.appendChild(tr);
-		});
-	}
-
-	function renderPagination(total, page, pageSize) {
-		const pageCount = Math.ceil(total / pageSize);
-		const pagination = document.getElementById('pagination');
-		pagination.innerHTML = '';
-		if (pageCount <= 1) return;
-		let html = '';
-		html += `<button ${page === 1 ? 'disabled' : ''} onclick="gotoPage(${page - 1})">&lt;</button>`;
-		for (let i = 1; i <= pageCount; i++) {
-			html += `<button ${i === page ? 'style="font-weight:bold; background:#eee;"' : ''} onclick="gotoPage(${i})">${i}</button>`;
-		}
-		html += `<button ${page === pageCount ? 'disabled' : ''} onclick="gotoPage(${page + 1})">&gt;</button>`;
-		pagination.innerHTML = html;
-	}
-
-	function updateStatus(id, status) {
-		fetch(`${apiBase}/${id}/status`, {
-			method: 'PUT',
-			headers: { 'Content-Type': 'application/json' },
-			body: JSON.stringify({ status: status })
-		})
-			.then(res => res.json())
-			.then(res => {
-				if (!res.success) {
-					alert('Failed to update status: ' + (res.message || 'Unknown error'));
-				}
-				fetchUsers();
-			})
-			.catch(err => alert('Failed to update status: ' + err));
-	}
-
-	function deleteUser(id, el) {
-		if (!confirm('Are you sure you want to delete this user?')) return;
-		fetch(`${apiBase}/${id}`, { method: 'DELETE' })
-			.then(res => res.json())
-			.then(res => {
-				if (res.success) {
-					const row = el.closest('tr');
-					if (row) row.remove();
-				} else {
-					alert('Delete failed: ' + (res.message || 'Unknown error'));
-				}
-			})
-			.catch(err => {
-				alert('Delete failed: ' + err);
+				tbody.appendChild(tr);
 			});
-	}
-
-	function gotoPage(page) {
-		currentPage = page;
-		renderUserTable();
-	}
-
-	function sortBy(field) {
-		if (currentSort.field === field) {
-			currentSort.dir = currentSort.dir === 'asc' ? 'desc' : 'asc';
-		} else {
-			currentSort.field = field;
-			currentSort.dir = 'asc';
 		}
-		renderUserTable();
-		updateSortIndicators();
-	}
 
-	function updateSortIndicators() {
-		document.querySelectorAll('th.sortable').forEach(th => {
-			const span = th.querySelector('.sort-indicator');
-			if (!span) return;
-			if (th.dataset.sort === currentSort.field) {
-				span.textContent = currentSort.dir === 'asc' ? '▲' : '▼';
-			} else {
-				span.textContent = '';
+		function renderPagination(total, page, pageSize) {
+			const pageCount = Math.ceil(total / pageSize);
+			const pagination = document.getElementById('pagination');
+			pagination.innerHTML = '';
+			if (pageCount <= 1) return;
+			let html = '';
+			html += `<button ${page === 1 ? 'disabled' : ''} onclick="gotoPage(${page - 1})">&lt;</button>`;
+			for (let i = 1; i <= pageCount; i++) {
+				html += `<button ${i === page ? 'style="font-weight:bold; background:#eee;"' : ''} onclick="gotoPage(${i})">${i}</button>`;
 			}
-		});
-	}
+			html += `<button ${page === pageCount ? 'disabled' : ''} onclick="gotoPage(${page + 1})">&gt;</button>`;
+			pagination.innerHTML = html;
+		}
 
-	function renderUserTable() {
-		let users = allUsers.slice();
-		// Filter by role
-		const role = document.getElementById('role-filter').value;
-		if (role) {
-			users = users.filter(u => {
-				const roles = (u.role || u.roles || []);
-				const roleNames = Array.isArray(roles) ? roles.map(r => r.roleName || r.RoleName || '').filter(Boolean) : [];
-				return roleNames.map(r => r.toLowerCase()).includes(role.toLowerCase());
-			});
-		}
-		// Search by name
-		const search = document.getElementById('search-name').value.trim().toLowerCase();
-		if (search) {
-			users = users.filter(u => (u.fullName || '').toLowerCase().includes(search));
-		}
-		// Sort
-		if (currentSort.field) {
-			users.sort((a, b) => {
-				let va = a[currentSort.field] || '';
-				let vb = b[currentSort.field] || '';
-				if (currentSort.field === 'createdAt') {
-					va = va ? new Date(va) : 0;
-					vb = vb ? new Date(vb) : 0;
-				}
-				if (typeof va === 'string') va = va.toLowerCase();
-				if (typeof vb === 'string') vb = vb.toLowerCase();
-				if (va < vb) return currentSort.dir === 'asc' ? -1 : 1;
-				if (va > vb) return currentSort.dir === 'asc' ? 1 : -1;
-				return 0;
-			});
-		}
-		// Pagination
-		const total = users.length;
-		const start = (currentPage - 1) * pageSize;
-		const paged = users.slice(start, start + pageSize);
-		renderUsers(paged);
-		renderPagination(total, currentPage, pageSize);
-	}
-
-	function fetchUsers() {
-		fetch(apiBase)
-			.then(res => res.json())
-			.then(res => {
-				if (res.success && Array.isArray(res.data)) {
-					allUsers = res.data;
-					currentPage = 1;
-					renderUserTable();
-				}
+		function updateStatus(id, status) {
+			fetch(`${apiBase}/${id}/status`, {
+				method: 'PUT',
+				headers: { 'Content-Type': 'application/json' },
+				body: JSON.stringify({ status: status })
 			})
-			.catch(err => {
-				console.error('Failed to fetch users:', err);
-			});
-	}
+				.then(res => res.json())
+				.then(res => {
+					if (!res.success) {
+						alert('Failed to update status: ' + (res.message || 'Unknown error'));
+					}
+					fetchUsers();
+				})
+				.catch(err => alert('Failed to update status: ' + err));
+		}
 
-	document.addEventListener('DOMContentLoaded', function() {
-		fetchUsers();
-		document.getElementById('role-filter').addEventListener('change', function() {
-			currentPage = 1;
+		function deleteUser(id, el) {
+			if (!confirm('Are you sure you want to delete this user?')) return;
+			fetch(`${apiBase}/${id}`, { method: 'DELETE' })
+				.then(res => res.json())
+				.then(res => {
+					if (res.success) {
+						const row = el.closest('tr');
+						if (row) row.remove();
+					} else {
+						alert('Delete failed: ' + (res.message || 'Unknown error'));
+					}
+				})
+				.catch(err => {
+					alert('Delete failed: ' + err);
+				});
+		}
+
+		function gotoPage(page) {
+			currentPage = page;
 			renderUserTable();
-		});
-		document.getElementById('search-name').addEventListener('input', function() {
-			currentPage = 1;
+		}
+
+		function sortBy(field) {
+			if (currentSort.field === field) {
+				currentSort.dir = currentSort.dir === 'asc' ? 'desc' : 'asc';
+			} else {
+				currentSort.field = field;
+				currentSort.dir = 'asc';
+			}
 			renderUserTable();
-		});
-		document.querySelectorAll('th.sortable').forEach(th => {
-			th.style.cursor = 'pointer';
-			th.addEventListener('click', function() {
-				sortBy(th.dataset.sort);
+			updateSortIndicators();
+		}
+
+		function updateSortIndicators() {
+			document.querySelectorAll('th.sortable').forEach(th => {
+				const span = th.querySelector('.sort-indicator');
+				if (!span) return;
+				if (th.dataset.sort === currentSort.field) {
+					span.textContent = currentSort.dir === 'asc' ? '▲' : '▼';
+				} else {
+					span.textContent = '';
+				}
+			});
+		}
+
+		function renderUserTable() {
+			let users = allUsers.slice();
+			// Filter by role
+			const role = document.getElementById('role-filter').value;
+			if (role) {
+				users = users.filter(u => {
+					const roles = (u.role || u.roles || []);
+					const roleNames = Array.isArray(roles) ? roles.map(r => r.roleName || r.RoleName || '').filter(Boolean) : [];
+					return roleNames.map(r => r.toLowerCase()).includes(role.toLowerCase());
+				});
+			}
+			// Search by name
+			const search = document.getElementById('search-name').value.trim().toLowerCase();
+			if (search) {
+				users = users.filter(u => (u.fullName || '').toLowerCase().includes(search));
+			}
+			// Sort
+			if (currentSort.field) {
+				users.sort((a, b) => {
+					let va = a[currentSort.field] || '';
+					let vb = b[currentSort.field] || '';
+					if (currentSort.field === 'createdAt') {
+						va = va ? new Date(va) : 0;
+						vb = vb ? new Date(vb) : 0;
+					}
+					if (typeof va === 'string') va = va.toLowerCase();
+					if (typeof vb === 'string') vb = vb.toLowerCase();
+					if (va < vb) return currentSort.dir === 'asc' ? -1 : 1;
+					if (va > vb) return currentSort.dir === 'asc' ? 1 : -1;
+					return 0;
+				});
+			}
+			// Pagination
+			const total = users.length;
+			const start = (currentPage - 1) * pageSize;
+			const paged = users.slice(start, start + pageSize);
+			renderUsers(paged);
+			renderPagination(total, currentPage, pageSize);
+		}
+
+		function fetchUsers() {
+			fetch(apiBase)
+				.then(res => res.json())
+				.then(res => {
+					if (res.success && Array.isArray(res.data)) {
+						allUsers = res.data;
+						currentPage = 1;
+						renderUserTable();
+					}
+				})
+				.catch(err => {
+					console.error('Failed to fetch users:', err);
+				});
+		}
+
+		document.addEventListener('DOMContentLoaded', function () {
+			fetchUsers();
+			document.getElementById('role-filter').addEventListener('change', function () {
+				currentPage = 1;
+				renderUserTable();
+			});
+			document.getElementById('search-name').addEventListener('input', function () {
+				currentPage = 1;
+				renderUserTable();
+			});
+			document.querySelectorAll('th.sortable').forEach(th => {
+				th.style.cursor = 'pointer';
+				th.addEventListener('click', function () {
+					sortBy(th.dataset.sort);
+				});
 			});
 		});
-	});
 	</script>
 	<style>
-	/* ===== USER STATUS SELECT – SAME STYLE AS PRODUCT ===== */
-	.sherah-table__status {
-		padding: 8px 18px !important;
-		border-radius: 8px !important;
-		font-weight: 600;
-		font-size: 15px;
-		cursor: pointer;
-		outline: none;
-		border: 1.5px solid #bdbdbd !important;
-		transition: all 0.3s ease;
-		appearance: none;
-		-webkit-appearance: none;
-		text-align: center;
-		background: #f7f7f7;
-		color: #333;
-		box-shadow: 0 1px 4px rgba(0, 0, 0, 0.07);
-		min-width: 120px;
-	}
+		/* ===== USER STATUS SELECT – SAME STYLE AS PRODUCT ===== */
+		.sherah-table__status {
+			padding: 8px 18px !important;
+			border-radius: 8px !important;
+			font-weight: 600;
+			font-size: 15px;
+			cursor: pointer;
+			outline: none;
+			border: 1.5px solid #bdbdbd !important;
+			transition: all 0.3s ease;
+			appearance: none;
+			-webkit-appearance: none;
+			text-align: center;
+			background: #f7f7f7;
+			color: #333;
+			box-shadow: 0 1px 4px rgba(0, 0, 0, 0.07);
+			min-width: 120px;
+		}
 
-	/* Active = Available */
-	.sherah-table__status option[value="active"]:checked,
-	.sherah-table__status.active,
-	.sherah-table__status[data-status="active"] {
-		background-color: #e8f5e9;
-		color: #1b5e20;
-		border-color: #43a047;
-	}
+		/* Active = Available */
+		.sherah-table__status option[value="active"]:checked,
+		.sherah-table__status.active,
+		.sherah-table__status[data-status="active"] {
+			background-color: #e8f5e9;
+			color: #1b5e20;
+			border-color: #43a047;
+		}
 
-	/* Blocked = Unavailable */
-	.sherah-table__status option[value="blocked"]:checked,
-	.sherah-table__status.blocked,
-	.sherah-table__status[data-status="blocked"] {
-		background-color: #fdecea;
-		color: #c62828;
-		border-color: #c62828;
-	}
+		/* Blocked = Unavailable */
+		.sherah-table__status option[value="blocked"]:checked,
+		.sherah-table__status.blocked,
+		.sherah-table__status[data-status="blocked"] {
+			background-color: #fdecea;
+			color: #c62828;
+			border-color: #c62828;
+		}
 
-	/* Hover giống product */
-	.sherah-table__status:hover {
-		opacity: 0.97;
-		box-shadow: 0 2px 8px rgba(0, 0, 0, 0.13);
-	}
-</style>
+		/* Hover giống product */
+		.sherah-table__status:hover {
+			opacity: 0.97;
+			box-shadow: 0 2px 8px rgba(0, 0, 0, 0.13);
+		}
+	</style>
 
 
 </body>
