--- a/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/login.html
+++ b/FE/dress-rental-template/wpdemo.redq.io/sites/dress-rental/html/login.html
@@ -7,6 +7,8 @@
   <title>Đăng nhập</title>
 
   <!-- Copy giống index.html của bạn nếu thiếu style -->
+  <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Forum|Open+Sans:400,600|Roboto:100,300,400,500,700"
+    rel="stylesheet">
   <link rel="stylesheet" href="../assets/dist/style/elements.css">
   <link rel="stylesheet" href="../assets/dist/style/header.css">
   <link rel="stylesheet" href="../assets/dist/style/footer.css">
