--- a/FE/Admin/admin-dashboard/customer-list.html
+++ b/FE/Admin/admin-dashboard/customer-list.html
@@ -850,7 +850,13 @@
 
 
 	<script>
-		const apiBase = "http://localhost:5135/api/Users";
+		const API_BASE =
+			location.hostname === "localhost" || location.hostname === "127.0.0.1"
+				? "http://localhost:5135/api"
+				: "/api";
+
+		const apiBase = `${API_BASE}/Users`;
+
 		let allUsers = [];
 		let currentPage = 1;
 		const pageSize = 6;
